# newsletter-agent

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/newsletter_crew/: crew.py  main.py
src/newsletter_crew/config/: agents.yaml  tasks.yaml
